Mobile Layout bug fixes

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ a {
 }
 .search__label {
   display: inline-block;
-  width: 40%;
+  width: 55%;
 }
 
 .search__input--check {
@@ -393,7 +393,7 @@ a {
 
   .rooms {
     max-width: 420px;
-    min-width: 370px;
+    min-width: 355px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
@@ -514,7 +514,7 @@ a {
 
   /* Search */
   .search__input--check {
-    width: 20%;
+    width: 40%;
   }
 
   .discription__extra ul {
@@ -550,5 +550,10 @@ a {
   /* Search */
   .search__title {
     font-size: var(--font-m);
+  }
+
+  .search__input--check {
+    width: 30%;
+    text-align: right;
   }
 }
